--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,13 @@
+% BiBTex database for MScBA Thesis
+% Sean Tully
+% Based on a template from Sean McGarraghy, which is reproduced without 
+% modification in the following 100 lines or so and is followed with my
+% additions in a clearly defined block
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%    START OF TEMPLATE                                                         %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 %  BiBTeX database for thesis "Xxxxxxxxxxxxxxxxx"
 %
 %% bibtexfile{
@@ -97,4 +107,369 @@ MRREVIEWER = {Martin Epkenhans},     }
  volume     = {9},
  number     = {2}, 
  pages      = {197--218}                                                          }
+ 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%    END OF TEMPLATE                                                           %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+ 
+% My bibliography starts here:
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%    Articles                                                                  %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@article{Ahmed:2000,
+  title = {Analytical investigations of the process planning problem},
+  journal = {Computers & Chemical Engineering},
+  volume = {23},
+  number = {11–12},
+  pages = {1605 - 1621},
+  year = {2000},
+  doi = {http://dx.doi.org/10.1016/S0098-1354(99)00312-9},
+  author = {Shabbir Ahmed and Nikolaos V. Sahinidis},
+}
+
+@article{Al-Otaibi:2004,
+  title={Simulation model determines optimal tank farm design},
+  author={Al-Otaibi, Ghanim A and Stewart, Michael D and others},
+  journal={Oil \& gas journal},
+  volume={102},
+  number={7},
+  pages={50--55},
+  year={2004},
+}
+
+@article{Bettinelli:2010,
+  author={Bettinelli,Andrea and Ceselli,Alberto and Righini,Giovanni},
+  year={2010},
+  month={09},
+  title={A branch-and-price algorithm for the variable size bin packing problem with minimum filling constraint},
+  journal={Annals of Operations Research},
+  volume={179},
+  number={1},
+  pages={221-241},
+}
+
+@article{Brunet:2012,
+  title = {Hybrid simulation-optimization based approach for the optimal design of single-product biotechnological processes},
+  journal = {Computers & Chemical Engineering},
+  volume = {37},
+  pages = {125 - 135},
+  year = {2012},
+  doi = {http://dx.doi.org/10.1016/j.compchemeng.2011.07.013},
+  author = {Robert Brunet and Gonzalo Guill{\'e}n-Gos{\'a}lbez and J. Ricardo P{\'e}rez-Correa and Jos{\'e} Antonio Caballero and Laureano Jim{\'e}nez},
+}
+
+@article{Cavin:2004,
+  title = {Multi-objective process design in multi-purpose batch plants using a Tabu Search optimization algorithm},
+  journal = {Computers & Chemical Engineering},
+  volume = {28},
+  number = {4},
+  pages = {459 - 478},
+  year = {2004},
+  doi = {http://dx.doi.org/10.1016/j.compchemeng.2003.07.002},
+  author = {L. Cavin and U. Fischer and F. Glover and K. Hungerb{\"u}hler},
+}
+
+@article{Cavin:2005},
+  title = {Batch process optimization in a multipurpose plant using Tabu Search with a design-space diversification},
+  journal = {Computers & Chemical Engineering},
+  volume = {29},
+  number = {8},
+  pages = {1770 - 1786},
+  year = {2005},
+  doi = {http://dx.doi.org/10.1016/j.compchemeng.2005.02.039},
+  author = {L. Cavin and U. Fischer and A. Mo\v{s}a{\'t} and K. Hungerb{\"u}hler},
+}
+
+@article{Dantzig:1957,
+  author = {George B. Dantzig},
+  journal = {Operations Research},
+  number = {2},
+  pages = {266-277},
+  title = {Discrete-Variable Extremum Problems},
+  volume = {5},
+  year = {1957},
+}
+
+@article{Dedieu:2003,
+  title = {Design and retrofit of multiobjective batch plants via a multicriteria genetic algorithm},
+  journal = {Computers & Chemical Engineering},
+  volume = {27},
+  number = {12},
+  pages = {1723 - 1740},
+  year = {2003},
+  doi = {http://dx.doi.org/10.1016/S0098-1354(03)00155-8},
+  author = {Samuel Dedieu and Luc Pibouleau and Catherine Azzaro-Pantel and Serge Domenech},
+}
+
+@article{Dietz:2007,
+  title = "Optimal design of batch plants under economic and ecological considerations: Application to a biochemical batch plant ",
+  journal = "Mathematical and Computer Modelling ",
+  volume = "46",
+  number = "1–2",
+  pages = "109 - 123",
+  year = "2007",
+  doi = "http://dx.doi.org/10.1016/j.mcm.2006.12.032",
+  author = "A. Dietz and C. Azzaro-Pantel and L. Pibouleau and S. Domenech",
+}
+
+@article{Dietz:2008,
+  title = {A fuzzy multiobjective algorithm for multiproduct batch plant: Application to protein production},
+  journal = {Computers & Chemical Engineering},
+  volume = {32},
+  number = {1–2},
+  pages = {292 - 306},
+  year = {2008},
+  url = {http://www.sciencedirect.com/science/article/pii/S0098135407001391},
+  author = {A. Dietz and A. Aguilar-Lasserre and C. Azzaro-Pantel and L. Pibouleau and S. Domenech},
+}
+
+@article{Grossmann:1979,
+  author = {Ignacio E. Grossmann and Roger W. H. Sargent},
+  title = {Optimum Design of Multipurpose Chemical Plants},
+  journal = {Industrial \& Engineering Chemistry Process Design and Development},
+  volume = {18},
+  number = {2},
+  pages = {343-348},
+  year = {1979},
+  doi = {10.1021/i260070a031},
+}
+
+@article{Harjunkoski:2014,
+  title = {Scope for industrial applications of production scheduling models and solution methods},
+  journal = {Computers & Chemical Engineering},
+  volume = {62},
+  pages = {161 - 193},
+  year = {2014},
+  doi = {http://dx.doi.org/10.1016/j.compchemeng.2013.12.001},
+  author = {Iiro Harjunkoski and Christos T. Maravelias and Peter Bongers and Pedro M. Castro and Sebastian Engell and Ignacio E. Grossmann and John Hooker and Carlos M{\'e}ndez and Guido Sand and John Wassick},
+}
+
+@article{Knuth:1974,
+  author = {Knuth, Donald E.},
+  title = {Computer Programming As an Art},
+  journal = {Commun. ACM},
+  volume = {17},
+  number = {12},
+  year = {1974},
+  pages = {667--673},
+  doi = {10.1145/361604.361612},
+}
+
+@article{Li:2008,
+  title = {A Strategy for Multi-objective Optimization under Uncertainty in Chemical Process Design},
+  journal = {Chinese Journal of Chemical Engineering},
+  volume = {16},
+  number = {1},
+  pages = {39 - 42},
+  year = {2008},
+  doi = {http://dx.doi.org/10.1016/S1004-9541(08)60033-6},
+  author = {Li Sun and Helen H. Lou},
+}
+
+@article{Loonkar:1970,
+  author = {Yashwant R. Loonkar and Jerome D. Robinson},
+  title = {Minimization of Capital Investment for Batch Processes. Calculation of Optimum Equipment Sizes},
+  journal = {Industrial \& Engineering Chemistry Process Design and Development},
+  volume = {9},
+  number = {4},
+  pages = {625-629},
+  year = {1970},
+  doi = {10.1021/i260036a023},
+}
+
+@article{Mosat:2008,
+  title = {Multiobjective optimization of multipurpose batch plants using superequipment class concept},
+  journal = {Computers & Chemical Engineering},
+  volume = {32},
+  number = {3},
+  pages = {512 - 529},
+  year = {2008},
+  doi = {http://dx.doi.org/10.1016/j.compchemeng.2007.03.017},
+  author = {Andrej Mo\v{s}a{\'t} and Laurent Cavin and Ulrich Fischer and Konrad Hungerb{\"u}hler},
+}
+
+@article{Neiro:2004,
+  title = {A general modeling framework for the operational planning of petroleum supply chains},
+  journal = {Computers & Chemical Engineering},
+  volume = {28},
+  number = {6–7},
+  pages = {871 - 896},
+  year = {2004},
+  doi = {http://dx.doi.org/10.1016/j.compchemeng.2003.09.018},
+  author = {S{\'e}rgio M.S. Neiro and Jos{\'e} M. Pinto},
+}
+
+@article{Papageorgaki:1990,
+  author = {Savoula Papageorgaki and Gintaras V. Reklaitis},
+  title = {Optimal design of multipurpose batch plants. 1. Problem formulation},
+  journal = {Industrial \& Engineering Chemistry Research},
+  volume = {29},
+  number = {10},
+  pages = {2054-2062},
+  year = {1990},
+  doi = {10.1021/ie00106a013},
+}
+
+@article{Papavasileiou:2007,
+title = {Optimize Manufacturing of Pharmaceutical Products with Process Simulation and Production Scheduling Tools},
+journal = {Chemical Engineering Research and Design},
+volume = {85},
+number = {7},
+pages = {1086 - 1097},
+year = {2007},
+doi = {http://dx.doi.org/10.1205/cherd06240},
+author = {V. Papavasileiou and A. Koulouris and C. Siletti and D. Petrides},
+}
+
+@article{Petrides:2011,
+  title={Optimizing the design of operation of fill-finish facilities using process simulation and scheduling tools},
+  author={Petrides, D and Siletti, C and Jimenez, J and Psathas, P and Mannion, Y},
+  journal={Pharmaceutical Eng},
+  volume={31},
+  number={2},
+  pages={1--10},
+  year={2011},
+}
+
+@article{Pinto:2000,
+  title = {Planning and scheduling models for refinery operations},
+  journal = {Computers & Chemical Engineering},
+  volume = {24},
+  number = {9–10},
+  pages = {2259 - 2276},
+  year = {2000},
+  doi = {http://dx.doi.org/10.1016/S0098-1354(00)00571-8},
+  author = {J.M. Pinto and M. Joly and L.F.L. Moro},
+}
+
+@article{Sangdae:1999,
+title = {Completion times algorithm and optimal scheduling of single line multi-purpose batch process},
+journal = {Computers & Chemical Engineering},
+volume = {23, Supplement},
+pages = {S543 - S546},
+year = {1999},
+doi = {http://dx.doi.org/10.1016/S0098-1354(99)80134-3},
+author = {Sangdae Park and Jae Hak Jung},
+}
+
+@article{Sparrow:1975,
+  author = {Robert E. Sparrow and Graham J. Forder and David W. T. Rippin},
+  title = {The Choice of Equipment Sizes for Multiproduct Batch Plants. Heuristics vs. Branch and Bound},
+  journal = {Industrial \& Engineering Chemistry Process Design and Development},
+  volume = {14},
+  number = {3},
+  pages = {197-203},
+  year = {1975},
+  doi = {10.1021/i260055a001},
+}
+
+@article{Stewart:2005,
+  title={Simulating optimal tank farm design},
+  author={Stewart, Michael D and Trierwiler, L Dean},
+  journal={PTQ Magazine},
+  number={2},
+  year={2005},
+}
+
+@article{Suhami:1982,
+  author = {Iren Suhami and Richard S. H. Mah},
+  title = {Optimal design of multipurpose batch plants},
+  journal = {Industrial \& Engineering Chemistry Process Design and Development},
+  volume = {21},
+  number = {1},
+  pages = {94-100},
+  year = {1982},
+  doi = {10.1021/i200016a017},
+}
+
+@article{Sundaramoorthy:2008,
+  author = {Arul Sundaramoorthy and Christos T. Maravelias},
+  title = {Modeling of Storage in Batching and Scheduling of Multistage Processes},
+  journal = {Industrial \& Engineering Chemistry Research},
+  volume = {47},
+  number = {17},
+  pages = {6648-6660},
+  year = {2008},
+  doi = {10.1021/ie701737a},
+}
+
+@article{Tan:1998,
+  title = {Evolutionary design of noncontinuous plants},
+  journal = {Computers & Chemical Engineering},
+  volume = {22},
+  number = {1–2},
+  pages = {69 - 85},
+  year = {1998},
+  doi = {http://dx.doi.org/10.1016/S0098-1354(96)00352-3},
+  author = {Shufeng Tan and Richard S.H. Mah"},
+}
+
+@article{Terrazas-Moreno:2012,
+  author = {Sebastian Terrazas-Moreno and Ignacio E. Grossmann and John M. Wassick},
+  title = {A Mixed-Integer Linear Programming Model for Optimizing the Scheduling and Assignment of Tank Farm Operations},
+  journal = {Industrial \& Engineering Chemistry Research},
+  volume = {51},
+  number = {18},
+  pages = {6441-6454},
+  year = {2012},
+  doi = {10.1021/ie202217v},
+}
+
+@article{Voudouris:1992,
+  author = {V. T. Voudouris and Ignacio E. Grossmann},
+  title = {Mixed-integer linear programming reformulations for batch process design with discrete equipment sizes},
+  journal = {Industrial \& Engineering Chemistry Research},
+  volume = {31},
+  number = {5},
+  pages = {1315-1325},
+  year = {1992},
+  doi = {10.1021/ie00005a012},
+}
+
+@article{Voudouris:1996,
+  title = {MILP model for scheduling and design of a special class of multipurpose batch plants},
+  journal = {Computers & Chemical Engineering},
+  volume = {20},
+  number = {11},
+  pages = {1335 - 1360},
+  year = {1996},
+  doi = {http://dx.doi.org/10.1016/0098-1354(96)81812-6},
+  author = {V.T. Voudouris and I.E. Grossmann},}
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%    Books                                                                     %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@Inbook{Schaus:2012,
+  author={Schaus, Pierre and R{\'e}gin, Jean-Charles and Van Schaeren, Rowan and Dullaert, Wout and Raa, Birger},
+  editor={Milano, Michela},
+  chapter={Cardinality Reasoning for Bin-Packing Constraint: Application to a Tank Allocation Problem},
+  title={Principles and Practice of Constraint Programming: 18th International Conference, CP 2012, Qu{\'e}bec City, QC, Canada, October 8-12, 2012. Proceedings},
+  year={2012},
+  publisher={Springer Berlin Heidelberg},
+  address={Berlin, Heidelberg},
+  pages={815--822},
+  isbn={978-3-642-33558-7},
+  doi={10.1007/978-3-642-33558-7_58},
+}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%    Proceedings                                                               %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@inproceedings{Sharda:2009,
+  title={Evaluating capacity and expansion opportunities at tank farm: a decision support system using discrete event simulation},
+  author={Sharda, Bikram and Vazquez, Adriana},
+  booktitle={Simulation Conference (WSC), Proceedings of the 2009 Winter},
+  pages={2218--2224},
+  year={2009},
+  organization={IEEE},
+}
+ 
+ 
 
