First pass formatting and setting up

--- a/ch1.tex
+++ b/ch1.tex
@@ -1,42 +1,26 @@
 %   MSc Business Analytics Dissertation
+%   Format based on skeleton template provided as part of module MIS40750
 %
-%   Title:     Aaa Bbbbbbb Cccccccccc
-%   Author(s): Xxxxxx Xxxxxxxxx and Yyy Yyyyyyyyy
+%   Title:     Optimising the design of buffer preparation in bioprocessing
+%              facilities
+%   Author:    Sean Tully
 %
-%   Chapter 1: Introduction and basic definitions
+%   Chapter 1: Introduction
 %
 %   Change Control:
 %   When     Who   Ver  What
-%   -------  ----  ---  --------------------------------------------------------------
-%   11Feb11  AB    0.1  Begun 
+%   -------  ----  ---  --------------------------------------------------------
+%   06Jun16  ST    0.1  Begun 
 %
 
 \chapter{Introduction}\label{C.intro}
 
 \begin{quote}
-If anybody calls, says the brother, tell them I'm above in Merrion Square workin at the 
-quateernyuns, says he, and take any message.  There does be other lads in the same house 
-doing sums with the brother.  The brother does be teachin them sums.  He does be puttin 
-them right about the sums and the quateernyuns.
+We have some freedom in setting up our personal standards of beauty, but it is
+especially nice when the things we regard as beautiful are also regarded by
+other people as useful.
 
-\textit{Indeed.} 
-
-I do believe the brother's makin a good thing out of the sums and the quateernyuns.  Your 
-men couldn't offer him less than five bob an hour and I'm certain sure he gets his tea 
-thrown in.
-
-\textit{That is a desirable perquisite.} 
-
-Because do you know, the brother won't starve.  The brother looks after Number Wan. 
-Matteradamn what he's at, it has to stop when the grubsteaks is on the table.  The brother's 
-very particular about that.
-
-\textit{Your relative is versed in the science of living.} 
-
-Begob the sums and the quateernyuns is quickly shoved aside when the alarm for grub is sounded 
-and all hands is piped to the table.  The brother thinks there's a time for everything.
-
-\hspace{2cm}--- Myles na Gopaleen, \emph{Cruiskeen Lawn}
+\hspace{2cm}--- Donald Knuth, \emph{Computer Programming as an Art}
 \end{quote}
 
 
