--- a/ch7.tex
+++ b/ch7.tex
@@ -1,17 +1,19 @@
 %   MSc Business Analytics Dissertation
+%   Format based on skeleton template provided as part of module MIS40750
 %
-%   Title:     Aaa Bbbbbbb Cccccccccc
-%   Author(s): Xxxxxx Xxxxxxxxx and Yyy Yyyyyyyyy
+%   Title:     Optimising the design of buffer preparation in bioprocessing
+%              facilities
+%   Author:    Sean Tully
 %
-%   Chapter 7: Conclusions and Future Research
+%   Chapter 7: Conclusions
 %
 %   Change Control:
 %   When     Who   Ver  What
-%   -------  ----  ---  --------------------------------------------------------------
-%   11Feb11  AB    0.1  Begun 
+%   -------  ----  ---  --------------------------------------------------------
+%   06Jun16  ST    0.1  Begun 
 %
 
-\chapter{Conclusions and Future Research}\label{C.Conclusions.Future.research}
+\chapter{Conclusions}\label{C.conclusions}
 
 \begin{quote}
 \textit{-- That's a most foolhardy remark, he said sharply, because the nerve-strings and 
