--- a/macros.tex
+++ b/macros.tex
@@ -36,7 +36,7 @@
 
 \theoremstyle{definition}
 
-\newtheorem{dm}{}  % Dummy theorem name for numbering only, independent of section
+\newtheorem{dm}{}  % Dummy theorem name for numbering only, ind. of section
 \newtheorem{dmy}[thm]{}  % Dummy theorem name for numbering only
 \newtheorem{defn}[thm]{Definition}
 \newtheorem{ex}[thm]{Example}
@@ -52,7 +52,8 @@
 \newtheorem{intr1}[thm]{Introduction}
 \newtheorem{intro}[thm]{Introduction}
 
-\newenvironment{pf}{\vspace{-4pt}\noindent\begin{proof}}{\end{proof}\vspace{2pt}}
+\newenvironment{pf}{\vspace{-4pt}\noindent\begin{proof}}{\end{proof}\vspace{2pt}
+}
 
 
 
