--- a/notation.tex
+++ b/notation.tex
@@ -1,20 +1,22 @@
 %   MSc Business Analytics Dissertation
+%   Format based on skeleton template provided as part of module MIS40750
 %
-%   Title:     Aaa Bbbbbbb Cccccccccc
-%   Author(s): Xxxxxx Xxxxxxxxx and Yyy Yyyyyyyyy
+%   Title:     Optimising the design of buffer preparation in bioprocessing
+%              facilities
+%   Author:    Sean Tully
 %
 %   List of Notation
 %
 %   Change Control:
 %   When     Who   Ver  What
-%   -------  ----  ---  --------------------------------------------------------------
-%   11Feb11  AB    0.1  Begun 
+%   -------  ----  ---  --------------------------------------------------------
+%   06Jun16  ST    0.1  Begun 
 %
 
-\chapter*{List of Notation}\label{C.Notation}
+\chapter*{List of Notation}\label{C.notation}
 
-Entries are listed in the order of appearance.  The ``Ref'' is the number of the section, 
-definition, etc., in which the notation is explained.
+Entries are listed in the order of appearance.  The ``Ref'' is the number of the
+section, definition, etc., in which the notation is explained.
 
 \vspace{0.5cm}
 
