--- a/preface.tex
+++ b/preface.tex
@@ -1,25 +1,36 @@
 %   MSc Business Analytics Dissertation
+%   Format based on skeleton template provided as part of module MIS40750
 %
-%   Title:     Aaa Bbbbbbb Cccccccccc
-%   Author(s): Xxxxxx Xxxxxxxxx and Yyy Yyyyyyyyy
+%   Title:     Optimising the design of buffer preparation in bioprocessing
+%              facilities
+%   Author:    Sean Tully
 %
 %   Preface
 %
 %   Change Control:
 %   When     Who   Ver  What
-%   -------  ----  ---  --------------------------------------------------------------
-%   11Feb11  AB    0.1  Begun 
+%   -------  ----  ---  --------------------------------------------------------
+%   06Jun16  ST    0.1  Begun 
 %
 
 \chapter*{Preface}
 
-% Some people like to put in a little quote (Knuth in particular loves this)
-
 \begin{quote}
-\noindent\textit{Men occasionally stumble over the truth, but most of them pick themselves up and 
-hurry off as if nothing had happened.}
- 
-\hspace{2cm}--- Winston Churchill
+The cold smell of potato mould, the squelch and slap
+
+Of soggy peat, the curt cuts of an edge
+
+Through living roots awaken in my head.
+
+But I've no spade to follow men like them.
+
+Between my finger and my thumb
+
+The squat pen rests.
+
+I'll dig with it.
+
+\hspace{2cm}--- Seamus Heaney, \emph{Digging}
 \end{quote}
 
 This thesis was motivated by \ldots
@@ -44,9 +55,10 @@ Chapter 6 examines \ldots
 
 % Conclusions and future work?
 Finally, in Chapter 7, we \ldots{} 
-and indicate some possible avenues for further research following on from the ideas introduced in this thesis.
+and indicate some possible avenues for further research following on from the
+ideas introduced in this thesis.
 
 \vspace{2em}
 
-University College Dublin \hfill Xxxxx Xxxxxxx \\
-\today \hfill Yyy Yyyyyyyyy
+University College Dublin \hfill Sean Tully \\
+\today 
