--- a/thesis.bib
+++ b/thesis.bib
@@ -44,70 +44,6 @@
 @String{WHF = {{W. H. Freeman and Company}}}
 @String{WI  = {{Wiley}}}
 
-@Article{Adams:1962,
- author     ={J. F. Adams},
-     TITLE = {Vector fields on spheres},
-   JOURNAL = {Ann. Math.},
-    VOLUME = {75},
-      YEAR = {1962},
-     PAGES = {603--632}                            }
-
-@Article{Atiyah:1961,
- author     ={M. F. Atiyah},
-     TITLE = {Characters and cohomology of finite groups},
-   JOURNAL = {Publ. Math. I.H.E.S.},
-    VOLUME = {9},
-      YEAR = {1961},
-     PAGES = {247--288}                            }
-
-@Article{Atiyah:1966a,
- author     ={M. F. Atiyah},
-     TITLE = {Power operations in ${K}$-theory},
-   JOURNAL = {Quart. J. Math. Oxford Ser. (2)},
-    VOLUME = {17},
-      YEAR = {1966},
-     PAGES = {165--193},
-   MRCLASS = {55.32},
-  MRNUMBER = {34 \#2004},
-MRREVIEWER = {J. F. Adams},                            }
-
-@Article{Atiyah:1966b,
- author     ={M. F. Atiyah},
-     TITLE = {${K}$-theory and reality},
-   JOURNAL = {Quart. J. Math. Oxford Ser. (2)},
-    VOLUME = {17},
-      YEAR = {1966},
-     PAGES = {367--386},
-   MRCLASS = {55.30 (57.30)},
-  MRNUMBER = {34 \#6756},
-MRREVIEWER = {J. F. Adams},                                }
-
-@Article{LewMcG:2000,
-    AUTHOR = {Lewis, David W. and McGarraghy, Se{\'a}n},
-     TITLE = {Annihilating polynomials, \'etale algebras, trace forms and
-              the {G}alois number},
-   JOURNAL = {Arch. Math.},
-  FJOURNAL = {Archiv der Mathematik. Archives of Mathematics. Archives
-              Math\'ematiques},
-    VOLUME = {75},
-      YEAR = {2000},
-    NUMBER = {2},
-     PAGES = {116--120},
-      ISSN = {0003-889X},
-     CODEN = {ACVMAL},
-   MRCLASS = {11E81 (12F10 19A22)},
-  MRNUMBER = {2001g:11054},
-MRREVIEWER = {Martin Epkenhans},     }
-
-@Article{McG:2002,
- author     = {Se\'an McGarraghy},
- title      = {{Exterior powers of symmetric bilinear forms}},
- journal    = {Algebra Colloquium},
- year       = {2002},
- volume     = {9},
- number     = {2}, 
- pages      = {197--218}                                                          }
- 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %    END OF TEMPLATE                                                           %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -121,7 +57,7 @@ MRREVIEWER = {Martin Epkenhans},     }
 
 @article{Ahmed:2000,
   title = {Analytical investigations of the process planning problem},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {23},
   number = {11–12},
   pages = {1605 - 1621},
@@ -153,34 +89,34 @@ MRREVIEWER = {Martin Epkenhans},     }
 
 @article{Brunet:2012,
   title = {Hybrid simulation-optimization based approach for the optimal design of single-product biotechnological processes},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {37},
   pages = {125 - 135},
   year = {2012},
   doi = {http://dx.doi.org/10.1016/j.compchemeng.2011.07.013},
-  author = {Robert Brunet and Gonzalo Guill{\'e}n-Gos{\'a}lbez and J. Ricardo P{\'e}rez-Correa and Jos{\'e} Antonio Caballero and Laureano Jim{\'e}nez},
+  author = {Robert Brunet and Gonzalo Guillén-Gosálbez and J. Ricardo Pérez-Correa and José Antonio Caballero and Laureano Jiménez},
 }
 
 @article{Cavin:2004,
   title = {Multi-objective process design in multi-purpose batch plants using a Tabu Search optimization algorithm},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {28},
   number = {4},
   pages = {459 - 478},
   year = {2004},
   doi = {http://dx.doi.org/10.1016/j.compchemeng.2003.07.002},
-  author = {L. Cavin and U. Fischer and F. Glover and K. Hungerb{\"u}hler},
+  author = {L. Cavin and U. Fischer and F. Glover and K. Hungerbühler},
 }
 
-@article{Cavin:2005},
+@article{Cavin:2005,
   title = {Batch process optimization in a multipurpose plant using Tabu Search with a design-space diversification},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {29},
   number = {8},
   pages = {1770 - 1786},
   year = {2005},
   doi = {http://dx.doi.org/10.1016/j.compchemeng.2005.02.039},
-  author = {L. Cavin and U. Fischer and A. Mo\v{s}a{\'t} and K. Hungerb{\"u}hler},
+  author = {L. Cavin and U. Fischer and A. Mošat́ and K. Hungerbühler},
 }
 
 @article{Dantzig:1957,
@@ -195,7 +131,7 @@ MRREVIEWER = {Martin Epkenhans},     }
 
 @article{Dedieu:2003,
   title = {Design and retrofit of multiobjective batch plants via a multicriteria genetic algorithm},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {27},
   number = {12},
   pages = {1723 - 1740},
@@ -217,7 +153,7 @@ MRREVIEWER = {Martin Epkenhans},     }
 
 @article{Dietz:2008,
   title = {A fuzzy multiobjective algorithm for multiproduct batch plant: Application to protein production},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {32},
   number = {1–2},
   pages = {292 - 306},
@@ -239,12 +175,12 @@ MRREVIEWER = {Martin Epkenhans},     }
 
 @article{Harjunkoski:2014,
   title = {Scope for industrial applications of production scheduling models and solution methods},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {62},
   pages = {161 - 193},
   year = {2014},
   doi = {http://dx.doi.org/10.1016/j.compchemeng.2013.12.001},
-  author = {Iiro Harjunkoski and Christos T. Maravelias and Peter Bongers and Pedro M. Castro and Sebastian Engell and Ignacio E. Grossmann and John Hooker and Carlos M{\'e}ndez and Guido Sand and John Wassick},
+  author = {Iiro Harjunkoski and Christos T. Maravelias and Peter Bongers and Pedro M. Castro and Sebastian Engell and Ignacio E. Grossmann and John Hooker and Carlos Méndez and Guido Sand and John Wassick},
 }
 
 @article{Knuth:1974,
@@ -282,24 +218,24 @@ MRREVIEWER = {Martin Epkenhans},     }
 
 @article{Mosat:2008,
   title = {Multiobjective optimization of multipurpose batch plants using superequipment class concept},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {32},
   number = {3},
   pages = {512 - 529},
   year = {2008},
   doi = {http://dx.doi.org/10.1016/j.compchemeng.2007.03.017},
-  author = {Andrej Mo\v{s}a{\'t} and Laurent Cavin and Ulrich Fischer and Konrad Hungerb{\"u}hler},
+  author = {Andrej Mošat́ and Laurent Cavin and Ulrich Fischer and Konrad Hungerbühler},
 }
 
 @article{Neiro:2004,
   title = {A general modeling framework for the operational planning of petroleum supply chains},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {28},
   number = {6–7},
   pages = {871 - 896},
   year = {2004},
   doi = {http://dx.doi.org/10.1016/j.compchemeng.2003.09.018},
-  author = {S{\'e}rgio M.S. Neiro and Jos{\'e} M. Pinto},
+  author = {Sérgio M.S. Neiro and José M. Pinto},
 }
 
 @article{Papageorgaki:1990,
@@ -336,7 +272,7 @@ author = {V. Papavasileiou and A. Koulouris and C. Siletti and D. Petrides},
 
 @article{Pinto:2000,
   title = {Planning and scheduling models for refinery operations},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {24},
   number = {9–10},
   pages = {2259 - 2276},
@@ -347,7 +283,7 @@ author = {V. Papavasileiou and A. Koulouris and C. Siletti and D. Petrides},
 
 @article{Sangdae:1999,
 title = {Completion times algorithm and optimal scheduling of single line multi-purpose batch process},
-journal = {Computers & Chemical Engineering},
+journal = {Computers \& Chemical Engineering},
 volume = {23, Supplement},
 pages = {S543 - S546},
 year = {1999},
@@ -398,7 +334,7 @@ author = {Sangdae Park and Jae Hak Jung},
 
 @article{Tan:1998,
   title = {Evolutionary design of noncontinuous plants},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {22},
   number = {1–2},
   pages = {69 - 85},
@@ -431,13 +367,13 @@ author = {Sangdae Park and Jae Hak Jung},
 
 @article{Voudouris:1996,
   title = {MILP model for scheduling and design of a special class of multipurpose batch plants},
-  journal = {Computers & Chemical Engineering},
+  journal = {Computers \& Chemical Engineering},
   volume = {20},
   number = {11},
   pages = {1335 - 1360},
   year = {1996},
   doi = {http://dx.doi.org/10.1016/0098-1354(96)81812-6},
-  author = {V.T. Voudouris and I.E. Grossmann},}
+  author = {V.T. Voudouris and I.E. Grossmann},
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -445,10 +381,10 @@ author = {Sangdae Park and Jae Hak Jung},
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @Inbook{Schaus:2012,
-  author={Schaus, Pierre and R{\'e}gin, Jean-Charles and Van Schaeren, Rowan and Dullaert, Wout and Raa, Birger},
+  author={Schaus, Pierre and Régin, Jean-Charles and Van Schaeren, Rowan and Dullaert, Wout and Raa, Birger},
   editor={Milano, Michela},
   chapter={Cardinality Reasoning for Bin-Packing Constraint: Application to a Tank Allocation Problem},
-  title={Principles and Practice of Constraint Programming: 18th International Conference, CP 2012, Qu{\'e}bec City, QC, Canada, October 8-12, 2012. Proceedings},
+  title={Principles and Practice of Constraint Programming: 18th International Conference, CP 2012, Québec City, QC, Canada, October 8-12, 2012. Proceedings},
   year={2012},
   publisher={Springer Berlin Heidelberg},
   address={Berlin, Heidelberg},
