--- a/ch3.tex
+++ b/ch3.tex
@@ -1,38 +1,20 @@
 %   MSc Business Analytics Dissertation
+%   Format based on skeleton template provided as part of module MIS40750
 %
-%   Title:     Aaa Bbbbbbb Cccccccccc
-%   Author(s): Xxxxxx Xxxxxxxxx and Yyy Yyyyyyyyy
+%   Title:     Optimising the design of buffer preparation in bioprocessing
+%              facilities
+%   Author:    Sean Tully
 %
-%   Chapter 3: Literature Review
+%   Chapter 3: Data
 %
 %   Change Control:
 %   When     Who   Ver  What
-%   -------  ----  ---  --------------------------------------------------------------
-%   11Feb11  AB    0.1  Begun 
+%   -------  ----  ---  --------------------------------------------------------
+%   06Jun16  ST    0.1  Begun 
 %
 
-\chapter{Literature Review}\label{C.LitReview}
-
-\begin{quote}
-Athenian: \textit{And what of the relations of line and surface to volume, or of line and 
-surface to one another? \ldots\ A man must be able to distinguish them on examination or 
-else be a very poor creature.  We should frequently propound such problems to each other 
---- a much more elegant pastime for the elderly than draughts --- and give our passion 
-for victory an outlet in amusements worthy of us.} 
-
-Clinias: \textit{I dare say, after all, the game of draughts and these studies are not so 
-widely different.}
-\vspace{0.1cm}
-
---- Plato, \emph{Laws VII, 820 a--d}
-\end{quote}
+\chapter{Data}\label{C.data}
 
 \section{Introduction}\label{S.intro3}
 
-It is well-known that \ldots
-
-\subsection{Examples of citations}\label{SS.citations}
-
-In \citep{Atiyah:1961,Atiyah:1966a,Atiyah:1966b}, Atiyah builds on the work of \citet{Adams:1962} to develop 
-the foundations of topological $K$-theory.  \citet{LewMcG:2000} and \citet{McG:2002} later extend parts of 
-this to a previously unexplored algebraic setting.
+We begin this chapter by \ldots
