--- a/ch4.tex
+++ b/ch4.tex
@@ -1,17 +1,19 @@
 %   MSc Business Analytics Dissertation
+%   Format based on skeleton template provided as part of module MIS40750
 %
-%   Title:     Aaa Bbbbbbb Cccccccccc
-%   Author(s): Xxxxxx Xxxxxxxxx and Yyy Yyyyyyyyy
+%   Title:     Optimising the design of buffer preparation in bioprocessing
+%              facilities
+%   Author:    Sean Tully
 %
 %   Chapter 4: Methodology
 %
 %   Change Control:
 %   When     Who   Ver  What
-%   -------  ----  ---  --------------------------------------------------------------
-%   11Feb11  AB    0.1  Begun 
+%   -------  ----  ---  --------------------------------------------------------
+%   06Jun16  ST    0.1  Begun 
 %
 
-\chapter{Methodology}\label{C.Methodology}
+\chapter{Methodology}\label{C.methodology}
 
 \begin{quote}
 \textit{Research is what I'm doing when I don't know what I'm doing.} 
@@ -19,6 +21,6 @@
 --- Werner von Braun
 \end{quote}
 
-\section{Introduction}\label{S.Ch4.opening}
+\section{Introduction}\label{S.intro4}
 
 The methodology used is \ldots
