--- a/ch5.tex
+++ b/ch5.tex
@@ -1,17 +1,19 @@
 %   MSc Business Analytics Dissertation
+%   Format based on skeleton template provided as part of module MIS40750
 %
-%   Title:     Aaa Bbbbbbb Cccccccccc
-%   Author(s): Xxxxxx Xxxxxxxxx and Yyy Yyyyyyyyy
+%   Title:     Optimising the design of buffer preparation in bioprocessing
+%              facilities
+%   Author:    Sean Tully
 %
 %   Chapter 5: Results
 %
 %   Change Control:
 %   When     Who   Ver  What
-%   -------  ----  ---  --------------------------------------------------------------
-%   11Feb11  AB    0.1  Begun 
+%   -------  ----  ---  --------------------------------------------------------
+%   06Jun16  ST    0.1  Begun 
 %
 
-\chapter{Results}\label{C.Results}
+\chapter{Results}\label{C.results}
 
 \section{Introduction}\label{S.intro5}
 
